version 1.5.1
--------------
* FIXED issue #126 The error messages are now helpful when incorrect input is provided in fields like DL_POLY's 'aliases' that take Python object-like input

version 1.5.0
--------------
* ADDED issue #93 HDF5 format can now be used as output format of analyses as well as input for plotters
* ADDED issue #75 Added a new Units Editor window for handling unit definitions and expanded the range of unit conversions in plotters. The internal unit handling has been also rewritten
* ADDED issue #71 Trajectory files generated by MDANSE now contain units
* ADDED (internal) issue #68 The data used by plotters is now abstracted, allowing for easier implementation of different data format inputs
* ADDED issue #62 A new MDANSE script, mdanse_job, has been added which can be used to directly open the GUI window for a job
* ADDED issue #58 2 new plotters for visualising trajectory variables (configuration, velocities, and gradients) have been added
* ADDED issue #49 The new MDANSE User Guide is now accessible from the Help menu
* ADDED issue #45 Data Info now also lists the variables present in the trajectory
* ADDED issue #43 Gromacs converter can now be used to also convert TRR files. This creates a trajectory with velocities and gradients if present
* ADDED issue #26 Added velocity interpolation to Current Correlation Function
* ADDED issue #25 The Pair Distribution Function analysis now also calculates Radial Distribution Function and Total Correlation Function
* FIXED issue #100 The Atoms List Selection now displays the correct number in the 'Number of atoms' field and prevents its change when opened from an analysis
* FIXED issue #98 Centre of masses option in the Eccentricity analysis now works correctly
* FIXED issue #95 MaterialsStudio converters (such as Forcite, Discover, DFTB) now create atom clusters correctly
* FIXED issue #69 Fixed the variables generated by the Rigid Body Trajectory job